AC_INIT(dynamic_module_makefile.in)

AC_ARG_WITH(mpi, MY_DESCR([--with-mpi],[enable MPI suppport]),
            [], [with_mpi=no])

PIKE_RETAIN_VARIABLES()

AC_SET_MAKE

dirs=
module_names=
MODULE_LINKOBJS=
MODULE_SEGMENTS=

for a in `(cd $srcdir ; echo *)`
do
  if test -d "$srcdir/$a" ; then
    if test -f "$srcdir/$a/configure.in"; then
	yesno=`echo $a | tr ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz`
	yesno=`eval echo \\$with_$yesno`
	if test "x${yesno-}" != xno ; then
	  MODULE_LINKOPTS="$MODULE_LINKOPTS $a/linker_options"
	  MODULE_SEGMENTS="$MODULE_SEGMENTS $a/modlist_segment"
	  module_names="$module_names $a"
	  dirs="$dirs $a"
	fi
    fi
  fi
done

AC_SUBST(MODULE_LINKOPTS)
AC_SUBST(MODULE_SEGMENTS)
AC_SUBST(module_names)

AC_SUBST_FILE(dependencies)
dependencies=$srcdir/dependencies
AC_CONFIG_SUBDIRS($dirs)

AC_OUTPUT(Makefile,[:],dirs="$module_names")
