# $Id: configure.in,v 1.9 2007/06/02 14:37:50 grubba Exp $
AC_INIT(Makefile.in)

PIKE_RETAIN_VARIABLES()

AC_SET_MAKE

dirs=
module_names=
MODULE_LINKOBJS=
MODULE_SEGMENTS=

for a in `(cd $srcdir ; echo *)`
do
  if test "$a" != "CVS" -a "$a" != "RCS" ; then
    if test -d "$srcdir/$a" ; then
      if test -f "$srcdir/$a/configure.in"; then
        yesno=`eval echo \\$with_$a`
	if test "x${yesno-}" != xno ; then
	  if test x$POST_MODULE_BUILD_TYPE = xstatic; then
	    MODULE_LINKOPTS="$MODULE_LINKOPTS $a/linker_options"
	    MODULE_SEGMENTS="$MODULE_SEGMENTS $a/modlist_segment"
	  fi
          module_names="$module_names $a"
	  if test "x$RECONFIGURE_BUNDLES" = "xyes"; then
	    if test x`find "$a" -name '*.bundle' -print -exec rm \{\} \;|head -1 2>/dev/null` = x; then
	      continue;
	    fi
	  fi
  	  dirs="$dirs $a"
        fi
      fi
    fi
  fi
done

AC_SUBST(MODULE_LINKOPTS)
AC_SUBST(MODULE_SEGMENTS)
AC_SUBST(module_names)

AC_SUBST_FILE(dependencies)
dependencies=$srcdir/dependencies
AC_CONFIG_SUBDIRS($dirs)

AC_OUTPUT(Makefile,[:],dirs="$module_names")

