AC_INIT(Makefile.in)

PIKE_RETAIN_VARIABLES()

AC_SET_MAKE

module_names=
MODULE_LINKOBJS=
MODULE_SEGMENTS=

PIKE_DYNAMIC_CONFIG_SUBDIRS
PIKE_FOREACH_CONFIG_SUBDIR([a], [
  yesno=`eval echo \\$with_$a`
  if test "x${yesno-}" != xno ; then
    if test x$POST_MODULE_BUILD_TYPE = xstatic; then
      MODULE_LINKOPTS="$MODULE_LINKOPTS $a/linker_options"
      MODULE_SEGMENTS="$MODULE_SEGMENTS $a/modlist_segment"
    fi
    module_names="$module_names $a"
    AC_CONFIG_SUBDIRS($a) dnl Expect warning "you should use literals"
  fi
])

AC_SUBST(MODULE_LINKOPTS)
AC_SUBST(MODULE_SEGMENTS)
AC_SUBST(module_names)

AC_SUBST_FILE(dependencies)
dependencies=$srcdir/dependencies

AC_OUTPUT(Makefile,[:],dirs="$module_names")
